time func added

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <a href="back/index.php">LogIn</a>
     <a href="back/register.php">Register</a>
+    <div id="joursFeries"></div>
+    <script src="js/joursFeries.js"></script>
 </body>
 </html>
